# qorb

./: Cargo.toml  README.adoc
.github/workflows/: rust.yml
benches/: pool_benchmark.rs
examples/: README.adoc
examples/dns_server/: config.toml  test.com.zone
examples/dropshot_echo_client/: main.rs
examples/dropshot_echo_server/: main.rs  openapi.json
examples/quiper_echo_client/: main.rs
examples/resolver/: main.rs
examples/tcp_echo_server/: main.rs
examples/tcp_echo_workload/: main.rs
qtop/: Cargo.toml
qtop/src/: main.rs
quiper/: Cargo.toml
quiper/src/: connector.rs  lib.rs
reqorb/: Cargo.toml
reqorb/src/: lib.rs
src/: LICENSE  backend.rs  backoff.rs  claim.rs  codel.rs  connection.rs  join.rs  lib.rs  policy.rs  pool.rs  priority_list.rs  qtop.rs  rebalancer.rs  resolver.rs  service.rs  slot.rs  window_counter.rs
src/connectors/: diesel_pg.rs  mod.rs  tcp.rs
src/resolvers/: dns.rs  fixed.rs  mod.rs  single_host.rs  static.rs
src/test_utils/: mod.rs
